--- a/info.html
+++ b/info.html
@@ -17,7 +17,7 @@
                     <a class="navbar-brand" href="#">ESCAE</a>
                 </div>
                 <ul class="nav">
-                    <li><a href="./acceuil.html">Accueil</a></li>
+                    <li><a href="./index.html">Accueil</a></li>
                     <li><a href="#">QUI SOMME NOUS?</a></li>
                     <li><a href="./filieres.html">NOS FILIERES</a></li>
                     <li><a href="./mafiliere.html">MA FILLIERE</a></li>
