--- a/mafiliere.html
+++ b/mafiliere.html
@@ -5,8 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>ESCAE</title>
-	<link rel="stylesheet" href="assets/css/style.css">
-    <link rel="shortcut icon" type="image/icon" href="assets/logo/favicon.png" />
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -17,7 +15,7 @@
                     <a class="navbar-brand" href="#">ESCAE</a>
                 </div>
                 <ul class="nav">
-                    <li><a href="./acceuil.html">Accueil</a></li>
+                    <li><a href="./index.html">Accueil</a></li>
                     <li><a href="./info.html">QUI SOMME NOUS?</a></li>
                     <li><a href="./filieres.html">NOS FILIERES</a></li>
                     <li><a href="#">MA FILLIERE</a></li>
